--- a/app/src/main/res/layout/line_view_group.xml
+++ b/app/src/main/res/layout/line_view_group.xml
@@ -2,7 +2,7 @@
 <RelativeLayout android:id="@+id/line_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="72dp"
-    android:paddingRight="16dp" android:paddingLeft="16dp"
+    android:paddingRight="16dp" android:paddingLeft="16dp" android:clickable="true"
     android:animateLayoutChanges="true" >
     <TextView android:id="@+id/tv_line_text"
         android:layout_width="wrap_content"
