--- a/app/src/main/res/layout/pagina_inicial.xml
+++ b/app/src/main/res/layout/pagina_inicial.xml
@@ -9,4 +9,10 @@
         android:layout_height="wrap_content"
         android:text="questoes"
         android:id="@+id/questoes" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="tela_questoes"
+        android:id="@+id/tela_questoes" />
 </LinearLayout>
