--- a/app/src/main/res/layout/lista_questoes.xml
+++ b/app/src/main/res/layout/lista_questoes.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/itemRoot"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF">
 
 
 
@@ -12,5 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textSize="20dp"
+        android:textColor="@color/black"
         android:text="@null"/>
 </LinearLayout>
