--- a/android/app/src/main/res/layout/fragment_question_option_content.xml
+++ b/android/app/src/main/res/layout/fragment_question_option_content.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".FullscreenActivity"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#0099cc" >
+    android:background="?attr/selectableItemBackground" >
     <TextView android:id="@+id/tv_option_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
