--- a/android/app/src/main/res/layout/line_view_group.xml
+++ b/android/app/src/main/res/layout/line_view_group.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="72dp"
     android:paddingRight="16dp" android:paddingLeft="16dp" android:clickable="true"
+    android:background="?attr/selectableItemBackground"
     android:animateLayoutChanges="true" >
     <TextView android:id="@+id/tv_line_text"
         android:layout_width="wrap_content"
