--- a/android/app/src/main/res/layout/lista_questoes.xml
+++ b/android/app/src/main/res/layout/lista_questoes.xml
@@ -1,9 +1,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/itemRoot"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
+
+    >
 
     <TextView
         android:id="@+id/idQuestao"
